--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div class = "container">
+	<div class = "holder">
 		<div class = "item">1</div>
 		<div class = "item">2</div>
 		<div class = "item">3</div>
